--- a/Views/Apply/ApplyNow.cshtml
+++ b/Views/Apply/ApplyNow.cshtml
@@ -3,45 +3,45 @@
 @{
     Layout = null;
 }
-<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+@*<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>*@
+<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
 <div id="ApplyNowResult" style="text-align:left">
     <form name="ApplyNowForm" method="post" id="ajax" accept-charset="utf-8" enctype="multipart/form-data">
 
         @*Here we need to specify enctype = “multipart/form-data” which is necessary for uploading Files.
-        <form name="ApplyNowForm" method="post" class="ajax" accept-charset="utf-8" enctype="multipart/form-data"> *@
-            <div class="form-group">
-                <label for="name">Full Name:</label>
-                @Html.TextBoxFor(m => m.Name, htmlAttributes: new { @class = "form-control req_input", id = "Applyname", placeholder = "Enter Your Name*", name = "Aname", onkeypress = "return restrictNumber61(event)" })
-                @Html.ValidationMessageFor(m => m.Name, "", htmlAttributes: new { @class = "ErrorMessage" })
-                <span id="Applyname_error" class="ErrorMessage field-validation-error"></span>
-            </div>
+            <form name="ApplyNowForm" method="post" class="ajax" accept-charset="utf-8" enctype="multipart/form-data"> *@
+        <div class="form-group">
+            <label for="name">Full Name:</label>
+            @Html.TextBoxFor(m => m.Name, htmlAttributes: new { @class = "form-control req_input", id = "Applyname", placeholder = "Enter Your Name*", name = "Aname", onkeypress = "return restrictNumber61(event)" })
+            @Html.ValidationMessageFor(m => m.Name, "", htmlAttributes: new { @class = "ErrorMessage" })
+            <span id="Applyname_error" class="ErrorMessage field-validation-error"></span>
+        </div>
 
-            <div class="form-group">
-                <label for="email">Email address:</label>
-                @Html.TextBoxFor(m => m.Email, htmlAttributes: new { @class = "form-control req_input", id = "Applyemail", placeholder = "Enter Your Email*", name = "Aemail" })
-                @Html.ValidationMessageFor(m => m.Email, "", htmlAttributes: new { @class = "ErrorMessage" })
-                <span id="Applyemail_error" class="ErrorMessage field-validation-error"></span>
-            </div>
+        <div class="form-group">
+            <label for="email">Email address:</label>
+            @Html.TextBoxFor(m => m.Email, htmlAttributes: new { @class = "form-control req_input", id = "Applyemail", placeholder = "Enter Your Email*", name = "Aemail" })
+            @Html.ValidationMessageFor(m => m.Email, "", htmlAttributes: new { @class = "ErrorMessage" })
+            <span id="Applyemail_error" class="ErrorMessage field-validation-error"></span>
+        </div>
 
-            <div class="form-group">
-                <label for="phone">Phone Number:</label>
-                @Html.TextBoxFor(m => m.Mobile, htmlAttributes: new { @class = "form-control req_input", onkeypress = "return restrictAlphabet61(event)", id = "Applymobile", placeholder = "Enter Your Phone Number*", pattern = "[6-9]{1}[0-9]{9}", title = "Phone number with 6-9 and remaing 9 digit with 0-9", name = "Amobile" })
-                @Html.ValidationMessageFor(m => m.Mobile, "", htmlAttributes: new { @class = "ErrorMessage" })
-                <span id="Applymobile_error" class="ErrorMessage field-validation-error"></span>
-            </div>
+        <div class="form-group">
+            <label for="phone">Phone Number:</label>
+            @Html.TextBoxFor(m => m.Mobile, htmlAttributes: new { @class = "form-control req_input", onkeypress = "return restrictAlphabet61(event)", id = "Applymobile", placeholder = "Enter Your Phone Number*", pattern = "[6-9]{1}[0-9]{9}", title = "Phone number with 6-9 and remaing 9 digit with 0-9", name = "Amobile" })
+            @Html.ValidationMessageFor(m => m.Mobile, "", htmlAttributes: new { @class = "ErrorMessage" })
+            <span id="Applymobile_error" class="ErrorMessage field-validation-error"></span>
+        </div>
 
-            <div class="form-group">
-                <label for="name">Attech Your Resume:</label>
-                <input type="file" class="form-control choosefile" id="Applypostedfile" name="selectedFile">
-                <span id="Applypostedfile_error" class="ErrorMessage field-validation-error"></span>
-            </div>
+        <div class="form-group">
+            <label for="name">Attach Your Resume:</label>
+            <input type="file" class="form-control choosefile" id="Applypostedfile" name="selectedFile">
+            <span id="Applypostedfile_error" class="ErrorMessage field-validation-error"></span>
+        </div>
 
-            <div class="col-lg-12 col-md-12 col-sm-12 work_btn">
-                <button value="submit" type="submit" id="ApplyNowButton" class="btn contact_orange_btn about_them_color about_border white_text" role="button" onclick=" return register_validate61()">Submit</button>
-            </div>
-        </form>
+        <div class="col-lg-12 col-md-12 col-sm-12 work_btn">
+            <button value="submit" type="submit" id="ApplyNowButton" class="btn contact_orange_btn about_them_color about_border white_text" role="button" onclick=" return register_validate61()">Submit</button>
+        </div>
+    </form>
 </div>
 
 <div id="successMsg" style="background-color:palegreen;color:blue; font-weight:bold; font-family:Cambria; margin-top:10px;border-radius:10px;"></div>
@@ -66,7 +66,7 @@
         xhr.onreadystatechange = function () {
             debugger
             if (xhr.readyState == 4 && xhr.status == 200) {
-                debugger 
+                debugger
                 if (xhr.response == "true") {
                     var name = document.getElementById('Applyname').value;
                     var phone = document.getElementById('Applymobile').value;
@@ -74,7 +74,7 @@
                     var result = "Thank You ";
                     result = result.concat(name, '\n', 'we will contact you soon ', '\n', '           on     ', '\n', phone, ' or ', email);
                     document.getElementById('successMsg').innerHTML = 'Email Send successfully and Received by Us Too..!!';
-                    $("#ApplyNowResult").replaceWith(result);                
+                    $("#ApplyNowResult").replaceWith(result);
                 }
                 else {
                     document.getElementById('errorResult').innerHTML = "Operation Failed" + "<br/>" + response;
@@ -83,7 +83,7 @@
         }
         return false;
     }
-	
+
 </script>
 
 @*Validation *@
