--- a/Views/Contact/ContactUs.cshtml
+++ b/Views/Contact/ContactUs.cshtml
@@ -4,8 +4,8 @@
     Layout = null;
     var actionLink = System.Configuration.ConfigurationManager.AppSettings["DemoForm1"];
 }
-<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+@*<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>*@
+<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
 <div id="QuoteResult" style="text-align:left">
     <form name="DemoForm" action="@actionLink" method="post" class="ajax" accept-charset="utf-8" enctype="multipart/form-data">
