--- a/Views/FileDownload/OnFileDownload.cshtml
+++ b/Views/FileDownload/OnFileDownload.cshtml
@@ -10,8 +10,8 @@
     var altText = "";
 }
 
-<script src="@Url.Content("~/Scripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+@*<script src="@Url.Content("~/Scripts/jquery-3.3.1.min.js")" type="text/javascript"></script>*@
+<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
 <section class="work_them_color clientpdf text-center">
     <div class="container-fluid">
