--- a/Views/OurDemo/OnDemoRequest.cshtml
+++ b/Views/OurDemo/OnDemoRequest.cshtml
@@ -5,8 +5,8 @@
     var ActionLink = System.Configuration.ConfigurationManager.AppSettings["DemoForm1"];
 }
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+@*<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>*@
+<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
 
 <div id="DemoResult" style="text-align:left">
@@ -51,10 +51,11 @@
             </div>
         </div>
 
-        <div class="form-group req_field">
 
-            @Html.TextBoxFor(m => m.Country, htmlAttributes: new { @class = "form-control req_input", rows = "5", id = "Dcountry_Name", placeholder = "Enter Your Country Name*", name = "country", onkeypress = "return restrictNumber5(event)" })
-            @Html.ValidationMessageFor(m => m.Country, "Message is required", htmlAttributes: new { @class = "ErrorMessage" })
+        <div class="form-group req_field">
+            @Html.EnumDropDownListFor(m => m.Country,
+            "- Select Country -", new { @class = "form-control req_input", id = "Dcountry_Name", name = "country" })
+            @Html.ValidationMessageFor(m => m.Country, "", htmlAttributes: new { @class = "ErrorMessage" })
             <div style="height:25px;overflow:auto">
                 <span id="Dcountry_Name_error" class="ErrorMessage field-validation-error"></span>
             </div>
@@ -66,13 +67,13 @@
             @Html.ValidationMessageFor(m => m.SelectDemo, "", htmlAttributes: new { @class = "ErrorMessage" })
             <div style="height:25px;overflow:auto">
                 <span id="dselected_Demo_error" style="color:red"></span>
-            </div> 
+            </div>
         </div>
-        <div class="form-group form-check">            
+        <div class="form-group form-check">
             <label class="form-check-label">
                 @Html.CheckBoxFor(m => m.Terms, htmlAttributes: new { @class = "form-check-input", id = "Dterm_Condition" })
                 @Html.LabelFor(m => m.Terms)
-                <a href="/terms-conditions/"> terms and conditions</a> ?
+                <a href="http://localhost:64439/terms-conditions/"> terms and conditions</a>
                 @Html.ValidationMessageFor(m => m.Terms, "", htmlAttributes: new { @class = "ErrorMessage" })
                 <span id="Dterm_Condition_error" style="color:red"></span>
             </label>
