--- a/Views/ReplyUs/onReplyUs.cshtml
+++ b/Views/ReplyUs/onReplyUs.cshtml
@@ -3,8 +3,8 @@
     Layout = null;
     var actionLink = System.Configuration.ConfigurationManager.AppSettings["DemoForm1"];
 }
-<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
+@*<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>*@
+<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
 <div id="LeaveReply" class="row blog_form blog_post" style="text-align:left">
     <div class="col-lg-12 col-md-12 col-sm-12 col-12 text-left">
